--- a/power_analysis/power_analysis_binomial_GLMM.Rmd
+++ b/power_analysis/power_analysis_binomial_GLMM.Rmd
@@ -2,26 +2,31 @@
 title: "power analysis - binomial GLMM"
 author: "Christoph Völter"
 date: "31/05/2020"
-output: html_document
+output: 
+  html_document:
+    theme: united
+    toc: yes
+    toc_depth: 4
+    toc_float: yes
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 
-load("power_sim_disjunctive_syll.RData")
+load("power_sim_disjsyll_order_as_factor_1000iter.RData")
 ```
 
 ## Generate data
 
-```{r}
+```{r echo=FALSE, include=FALSE}
 
 set.seed(1)
 n.subject <- 16 # number subjects
 n.per.subject <- 18 # observations per subject
 n.per.condition <- 18 # observations per subject and condition
 subj.id <- as.factor(paste("subj", 1:n.subject, sep = "."))
-age_range <- c(8:40) # age range between 8 and 40
+age_range <- c(12:31) # age range between 8 and 40
 control.per <- 1/3 # performance in control condition
 test.per <- 0.55 # performance in test condition
 
@@ -43,7 +48,7 @@ sex <- sample(x = c("F", "M"), size = length(unique(start.data$subj.id)), replac
 start.data$sex <- as.factor(sex[as.numeric(start.data$subj.id)])
 
 ## add order
-start.data$order <- rep(x = c("test_first", "control_first"), times = nrow(start.data) / 2)
+start.data$order <- as.factor(rep(x = c("test_first", "control_first"), times = nrow(start.data) / 2))
 
 start.data <- start.data %>%
   mutate(order2 = as.numeric(ifelse(order == "test_first" & condition == "test", "1", ifelse(order == "test_first" & condition == "control", "2", ifelse(order == "control_first" & condition == "control", "1", ifelse(order == "control_first" & condition == "test", "2", ""))))))
@@ -55,10 +60,11 @@ start.data$z.order=as.vector(scale(as.numeric(start.data$order2)))
 
 #dummy code factors
 start.data$condition.dummy=as.numeric(start.data$condition==levels(start.data$condition)[2])
+start.data$order.dummy=as.numeric(start.data$order==levels(start.data$order)[2])
 
 #center condition for random slopes:
 start.data$condition.c=as.numeric(start.data$condition)-mean(as.numeric(start.data$condition))
-
+start.data$order.c=as.numeric(start.data$order)-mean(as.numeric(start.data$order))
 
 # checks:
 # does each subject have only one sex and age?
@@ -82,8 +88,10 @@ range(apply(X = xx > 0, MARGIN = 1, sum))
 ```
 
 
+
+```{r include=FALSE}
+#not relevant for the simulation, chunk can be removed.
 ## parameterization of the fixed effects
-```{r}
 pv <- c(0, 1)
 c0 <- log(control.per / (1 - control.per)) # intercept
 c.test <- log(test.per / (1 - test.per)) - log(control.per / (1 - control.per)) / (max(pv) - min(pv)) # slope
@@ -92,20 +100,18 @@ c.test <- log(test.per / (1 - test.per)) - log(control.per / (1 - control.per)) 
 LP <- c0 + c.test * pv # linear predictor
 rv <- exp(LP) / (1 + exp(LP)) # response variable
 range(rv)
-```
 
-```{r}
 par(mar=c(3, 3, 0.2, 0.2), mgp=c(1.7, 0.3, 0), tcl=-0.2, las=1)
-plot(x=pv, y=rv, type="hist", ylim=c(0, 1),
+plot(x=as.factor(pv), y=rv, type="hist", ylim=c(0, 1),
 xlab="condition", ylab="correct choice")
 ```
 
 
 
-### parameterising the response
+## Simulation
 
-```{r}
-n.simus <- 10 # small number for testing
+```{r eval=FALSE, include=FALSE}
+n.simus <- 1000 # small number for testing
 r.effects <- c(0.175, 0.35, 0.7) # random effects to be simulated
 # with the intercept being -0.6931472 (qlogis(1/3)) we could make the following
 # guesses for the random intercept:
@@ -123,7 +129,7 @@ r.slope.con <- c(0.45, 0.9)
 #- 1.8: very strong random intercepts effect
 
 r.slope.trial <- 0.1
-r.slope.order <- 0.1
+#r.slope.order <- 0.1 #if order is included as within-subject factor.
 
 # create object to store the simulation parameters and results:
 all.res <- data.frame(expand.grid(
@@ -161,10 +167,10 @@ coefs <- c(
   "z.age" = 0,
   "sexM" = 0,
   "z.trial" = 0,
-  "z.order" = 0
+  "ordertest_first" = 0
 )
 
-m.mat <- model.matrix(object = ~condition + z.age + sex + z.trial + z.order, data = xdata) # create model martix
+m.mat <- model.matrix(object = ~condition + z.age + sex + z.trial + order, data = xdata) # create model martix
 
 # run simulation
 for (i in 1:nrow(all.res)) {
@@ -177,23 +183,23 @@ for (i in 1:nrow(all.res)) {
   # add random effect to linear predictor:
   LP <- LP + rnorm(n = n.subject, sd = all.res[i, "r.effect"])[as.numeric(xdata$subj.id)] + 
     rnorm(n = n.subject, sd = all.res[i, "r.slope.con"])[as.numeric(xdata$subj.id)]*xdata$condition.dummy +
-    rnorm(n = n.subject, sd = all.res[i, "r.slope.trial"])[as.numeric(xdata$subj.id)]*xdata$z.trial +
-    rnorm(n = n.subject, sd = all.res[i, "r.slope.order"])[as.numeric(xdata$subj.id)]*xdata$z.order 
+    rnorm(n = n.subject, sd = all.res[i, "r.slope.trial"])[as.numeric(xdata$subj.id)]*xdata$z.trial #+
+    #rnorm(n = n.subject, sd = all.res[i, "r.slope.order"])[as.numeric(xdata$subj.id)]*xdata$z.order 
 
   # generate response:
   xdata$correct <- rbinom(n = nrow(xdata), size = 1, prob = exp(LP) / (1 + exp(LP)))
 
   # fit full model:
-  full <- keepWarnings(glmer(correct ~ condition + z.age + sex + z.trial + z.order + (1 + condition.c + z.trial + z.order || subj.id),
+  full <- keepWarnings(glmer(correct ~ condition + z.age + sex + z.trial + order + (1 + condition.c + z.trial || subj.id),
     data = xdata, family = binomial, control = contr
   ))
   # fit null model:
-    null <- keepWarnings(glmer(correct ~ z.trial + z.order + (1 + condition.c + z.trial + z.order || subj.id),
+    null <- keepWarnings(glmer(correct ~ z.trial + order + (1 + condition.c + z.trial || subj.id),
     data = xdata, family = binomial, control = contr
   ))
     
   # store results:
-  all.res[i, c("icpt", "conditiontest", "z.age", "sexM", "z.trial", "z.order")] <- fixef(full$value)
+  all.res[i, c("icpt", "conditiontest", "z.age", "sexM", "z.trial", "ordertest_first")] <- fixef(full$value)
   all.res[i, "re.sd"] <- as.data.frame(summary(full$value)$varcor)[1, "sdcor"]
   all.res[i, "warns.full"] <- nchar(paste(full$warnings, collapse = ""))
   all.res[i, "warns.null"] <- nchar(paste(null$warnings, collapse = ""))
@@ -202,25 +208,32 @@ for (i in 1:nrow(all.res)) {
 }
 
 
-
+#save.image("power_sim_disjsyll_order_as_factor_1000iter.RData")
 ```
 
-## evaluation of results 
+## Evaluation of results 
 
-* number of warning per combinations of random effects
-```{r}
+* number of warning per combinations of random effects (out of 1000 models per cell)  
+Full model:  
+```{r echo=FALSE}
 #full model
 tapply(X=all.res[, "warns.full"]>0, INDEX=all.res[, c("r.slope.con", "r.effect")],
 FUN=sum)
+#warning codes: 
+#363: unable to evaluate scaled gradient. Model failed to converge: degenerate  Hessian with 1 negative eigenvalues
+#205: Model is nearly unidentifiable: large eigenvalue ratio - Rescale variables?
+```
 
+Null model:  
+```{r echo=FALSE}
 #null model: 
 tapply(X=all.res[, "warns.null"]>0, INDEX=all.res[, c("r.slope.con", "r.effect")],
 FUN=sum)
 ```
 
-* plotting the estimates
+* plotting the estimates (all models)
 
-```{r}
+```{r echo=FALSE}
 par(mar=c(3, 3, 0.2, 0.2), mgp=c(1.7, 0.3, 0), tcl=-0.15, las=1)
 plot(
   x = as.numeric(as.factor(rep(
@@ -234,38 +247,40 @@ plot(
 mtext(text = c("icpt", "conditiontest", "re.sd"), side = 1, at = 1:3, line = 0.2)
 ```
 
-* models that converged without warnings:
-```{r}
+## Only models that converged are evaluated from here on:  
+
+```{r include=FALSE}
 all.res2=subset(all.res, warns.full==0)
 
 table(round(all.res2$conditiontest))
 
 ```
 
-### How many LRTs of condition are significant?
-```{r}
-lrt.data <- all.res %>%
+### How many models converged and have a significant LRT of condition or a significant full-null model comparison?   
+```{r echo=FALSE}
+lrt.data <- all.res2 %>%
   group_by(r.effect, r.slope.con) %>%
-  summarise(lrt.p.con.mean = mean(lrt.p.con), 
-            n.sign.lrt = length(lrt.p.con[lrt.p.con <= 0.05]), 
-            n.lrt = length(lrt.p.con), 
-            proportion.sign.lrt = length(lrt.p.con[lrt.p.con <= 0.05]) / length(lrt.p.con),
-            full.null.p.mean = mean(full.null.p), 
-            n.sign.full.null.p = length(full.null.p[full.null.p <= 0.05]),
-            n.fn = length(full.null.p), 
-            proportion.sign.fn = length(full.null.p[full.null.p <= 0.05]) / length(full.null.p),)
+  summarise(lrt.p.con.mean = mean(lrt.p.con), #mean condition p-value of the models that converged
+            n.sign.lrt = length(lrt.p.con[lrt.p.con < 0.05]), #number of significant condition effects
+            n.lrt = n.simus,#length(lrt.p.con), #number of iterations
+            proportion.sign.lrt = length(lrt.p.con[lrt.p.con < 0.05]) / n.simus, #proportion of significant condition effects
+            full.null.p.mean = mean(full.null.p), #mean full-null model p-value of the models that converged
+            n.sign.full.null.p = length(full.null.p[full.null.p < 0.05]), #number of significant full-null model comparisons
+            n.fn = n.simus, #length(full.null.p), #number of iterations 
+            proportion.sign.fn = length(full.null.p[full.null.p < 0.05]) /n.simus) #proportion of significant full-null model comparisons
 
 lrt.data
 ```
 
 #### Plotting the proportion of significant Full-null model comparisons
 
-```{r}
+```{r echo=FALSE}
 
 ggplot(data = lrt.data, aes(y=proportion.sign.fn))+
   geom_point(aes(x=as.factor(r.effect), y=proportion.sign.fn))+
   geom_boxplot(aes(x=as.factor(r.effect), y=proportion.sign.fn, group=r.effect))+
   #theme_classic()+
+  ylim(0.3, 1)+
   geom_hline(yintercept=0.8, colour="red", lty=2)+
   facet_wrap(~r.slope.con)
 
@@ -275,23 +290,48 @@ ggplot(data = lrt.data, aes(y=proportion.sign.fn))+
 
 #### Plotting the proportion of significant LRTs for the predictor variable condition
 
-```{r}
+```{r echo=FALSE}
 
 ggplot(data = lrt.data, aes(y=proportion.sign.lrt))+
   geom_point(aes(x=as.factor(r.effect), y=proportion.sign.lrt))+
   geom_boxplot(aes(x=as.factor(r.effect), y=proportion.sign.lrt, group=r.effect))+
   #theme_classic()+
+  ylim(0.3, 1)+
   geom_hline(yintercept=0.8, colour="red", lty=2)+
   facet_wrap(~r.slope.con)
 
 ```
 
+### How many models converged, have a significant full-null model comparison, and a significant LRT of condition?  
+```{r echo=FALSE}
 
+lrt.data2 <- all.res2 %>%
+  filter(full.null.p<0.05)%>%
+  group_by(r.effect, r.slope.con) %>%
+  summarise(lrt.p.con.mean2 = mean(lrt.p.con), 
+            n.sign.lrt2 = length(lrt.p.con[lrt.p.con < 0.05]), 
+            n.lrt = n.simus,#length(lrt.p.con), 
+            proportion.sign.lrt2 = length(lrt.p.con[lrt.p.con < 0.05]) / n.simus)
 
+lrt.data2
+```
 
+#### Plotting the proportion of significant LRTs for the predictor variable condition ONLY based on models that converged and with a significant full-null model comparison
+
+```{r echo=FALSE}
+
+ggplot(data = lrt.data2, aes(y=proportion.sign.lrt2))+
+  geom_point(aes(x=as.factor(r.effect), y=proportion.sign.lrt2))+
+  geom_boxplot(aes(x=as.factor(r.effect), y=proportion.sign.lrt2, group=r.effect))+
+  #theme_classic()+
+  ylim(0.3, 1)+
+  geom_hline(yintercept=0.8, colour="red", lty=2)+
+  facet_wrap(~r.slope.con)
+
+```
 
 #### Plotting the intercepts
-```{r}
+```{r echo=FALSE}
 #some preparation for plotting:
 par(mar=c(3, 3, 0.2, 0.2), mgp=c(1.7, 0.3, 0), tcl=-0.15, las=1)
 where=as.numeric(as.factor(paste(all.res2$r.effect, all.res2$r.slope.con,
@@ -309,9 +349,18 @@ mtext(text="re:", side=1, line=1.4, at=0.5, cex=1)
 abline(v=(1:length(r.effects))[-length(r.effects)]*length(r.slope.con)+0.5,
 lty=2)
 ```
+```{r echo=FALSE}
+ggplot(data = all.res2, aes(x=as.factor(r.effect), y=icpt))+
+  geom_jitter( alpha=0.5, col="grey")+
+  geom_boxplot(aes(x=as.factor(r.effect), y=icpt, group=r.effect), alpha=0.1, outlier.colour="white")+
+  geom_hline(yintercept=coefs["(Intercept)"], colour="red", lty=2)+
+  facet_wrap(~r.slope.con)
+```
+
+
 
 #### Plotting the fixed effect of condition
-```{r}
+```{r echo=FALSE}
 
 plot(x=where, y=all.res2$conditiontest, xlab="", xaxt="n", pch=19,
 col=grey(level=0.5, alpha=0.5), cex=1.5)
@@ -325,8 +374,18 @@ mtext(text="re:", side=1, line=1.4, at=0.5, cex=1)
 abline(v=(1:length(r.effects))[-length(r.effects)]*length(r.slope.con)+0.5,
 lty=2)
 ```
-#### Plotting the random intercept
-```{r}
+
+```{r echo=FALSE}
+ggplot(data = all.res2, aes(x=as.factor(r.effect), y=conditiontest))+
+  geom_jitter( alpha=0.5, col="grey")+
+  geom_boxplot(aes(x=as.factor(r.effect), y=conditiontest, group=r.effect), alpha=0.1, outlier.colour="white")+
+  geom_hline(yintercept=coefs["conditiontest"], colour="red", lty=2)+
+  facet_wrap(~r.slope.con)
+```
+
+
+#### Plotting the random intercept  
+```{r echo=FALSE}
 plot(x=where, y=all.res2$re.sd, xlab="", xaxt="n", pch=19,
 col=grey(level=0.5, alpha=0.5), cex=1.5)
 hll=1.0
@@ -343,11 +402,22 @@ lty=2)
 ```
 
 
+```{r echo=FALSE}
+ggplot(data = all.res2, aes(x=as.factor(r.effect), y=re.sd))+
+  geom_jitter( alpha=0.5, col="grey")+
+  geom_boxplot(aes(x=as.factor(r.effect), y=re.sd, group=r.effect), alpha=0.1, outlier.colour="white")+
+  #theme_classic()+
+  #scale_y_continuous(trans='log10')+
+  #geom_hline(yintercept=0.05, colour="red", lty=2)+
+  facet_wrap(~r.slope.con)
+```
+
+
 #### Plotting the full-null model comparison p-values
-```{r}
-ggplot(data = all.res, aes(y=full.null.p))+
-  geom_point(aes(x=as.factor(r.effect), y=full.null.p))+
-  geom_boxplot(aes(x=as.factor(r.effect), y=full.null.p, group=r.effect))+
+```{r echo=FALSE}
+ggplot(data = all.res2, aes(y=full.null.p))+
+  geom_jitter(aes(x=as.factor(r.effect), y=full.null.p), alpha=0.5, col="grey")+
+  geom_boxplot(aes(x=as.factor(r.effect), y=full.null.p, group=r.effect), alpha=0.1, outlier.colour="white")+
   #theme_classic()+
   scale_y_continuous(trans='log10')+
   geom_hline(yintercept=0.05, colour="red", lty=2)+
@@ -356,10 +426,10 @@ ggplot(data = all.res, aes(y=full.null.p))+
 ```
 
 #### Plotting the LRT p-values of condition
-```{r}
-ggplot(data = all.res, aes(y=lrt.p.con))+
-  geom_point(aes(x=as.factor(r.effect), y=lrt.p.con))+
-  geom_boxplot(aes(x=as.factor(r.effect), y=lrt.p.con, group=r.effect))+
+```{r echo=FALSE}
+ggplot(data = all.res2, aes(y=lrt.p.con))+
+  geom_jitter(aes(x=as.factor(r.effect), y=lrt.p.con), alpha=0.5, col="grey")+
+  geom_boxplot(aes(x=as.factor(r.effect), y=lrt.p.con, group=r.effect), alpha=0.1, outlier.colour="white")+
   #theme_classic()+
   scale_y_continuous(trans='log10')+
   geom_hline(yintercept=0.05, colour="red", lty=2)+
@@ -370,8 +440,8 @@ ggplot(data = all.res, aes(y=lrt.p.con))+
 
 
 
-```{r}
-save.image("power_sim_disjunctive_syll.RData")
+```{r eval=FALSE, include=FALSE}
+#save.image("power_sim_disjunctive_syll_order_as_factor.RData")
 ```
 
 
