--- a/power_analysis/power_analysis_binomial_GLMM.Rmd
+++ b/power_analysis/power_analysis_binomial_GLMM.Rmd
@@ -13,8 +13,10 @@ output:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
+library(cowplot)
+library("gghalves")
 
-load("power_sim_disjsyll_order_as_factor_1000iter_12tr.RData")
+load("power_sim_disjsyll_order_as_factor_1000iter_12tr_2levels.RData")
 ```
 
 ## Generate data
@@ -28,7 +30,7 @@ n.per.condition <- 12 # observations per subject and condition
 subj.id <- as.factor(paste("subj", 1:n.subject, sep = "."))
 age_range <- c(12:31) # age range between 8 and 40
 control.per <- 1 / 3 # performance in control condition
-test.per <- 0.55 # performance in test condition
+test.per <- c(0.55, 0.65) # performance in test condition
 
 start.data <- data.frame(subj.id)
 # duplicate rows according to the number obs. per subject:
@@ -135,6 +137,7 @@ r.slope.trial <- 0.1
 all.res <- data.frame(expand.grid(
   n.per.subject = n.per.subject, r.effect = r.effects, 
   r.slope.con = r.slope.con, r.slope.trial = r.slope.trial, #r.slope.order = r.slope.order,
+  test.per = test.per,
   simu = 1:n.simus
 ))
 all.res$icpt <- NA
@@ -161,14 +164,7 @@ contr <- glmerControl(optimizer = "bobyqa", optCtrl = list(maxfun = 10000))
 
 xdata <- start.data
 
-coefs <- c(
-  "(Intercept)" = log(control.per / (1 - control.per)),
-  "conditiontest" = log(test.per / (1 - test.per)) - log(control.per / (1 - control.per)),
-  "z.age" = 0,
-  "sexMale" = 0,
-  "z.trial" = 0,
-  "ordertest_first" = 0
-)
+
 
 m.mat <- model.matrix(object = ~condition + z.age + sex + z.trial + order, data = xdata) # create model martix
 
@@ -184,7 +180,16 @@ for (i in 1:nrow(all.res)) {
   # add sex (if it should be generated in each loop)
   # sex <- sample(x = c("F", "M"), size = length(unique(start.data$subj.id)), replace = T)
   # start.data$sex <- as.factor(sex[as.numeric(start.data$subj.id)])
-
+  
+  coefs <- c(
+  "(Intercept)" = log(control.per / (1 - control.per)),
+  "conditiontest" = log(all.res[i, "test.per"] / (1 - all.res[i, "test.per"] )) - log(control.per / (1 - control.per)),
+  "z.age" = 0,
+  "sexMale" = 0,
+  "z.trial" = 0,
+  "ordertest_first" = 0
+)
+  
   LP <- m.mat[, names(coefs)] %*% coefs # LP wrt fixed effects
 
   # add random effect to linear predictor:
@@ -215,7 +220,7 @@ for (i in 1:nrow(all.res)) {
 }
 
 
-#save.image("power_sim_disjsyll_order_as_factor_1000iter_12tr.RData")
+#save.image("power_sim_disjsyll_order_as_factor_1000iter_12tr_2levels.RData")
 ```
 
 ## Evaluation of results 
@@ -266,7 +271,7 @@ table(round(all.res2$conditiontest))
 ### How many models converged and have a significant LRT of condition or a significant full-null model comparison?   
 ```{r echo=FALSE}
 lrt.data <- all.res2 %>%
-  group_by(r.effect, r.slope.con) %>%
+  group_by(test.per, r.effect, r.slope.con) %>%
   summarise(lrt.p.con.mean = mean(lrt.p.con), #mean condition p-value of the models that converged
             n.sign.lrt = length(lrt.p.con[lrt.p.con < 0.05]), #number of significant condition effects
             n.lrt = n.simus,#length(lrt.p.con), #number of iterations
@@ -314,7 +319,7 @@ ggplot(data = lrt.data, aes(y=proportion.sign.lrt))+
 
 lrt.data2 <- all.res2 %>%
   filter(full.null.p<0.05)%>%
-  group_by(r.effect, r.slope.con) %>%
+  group_by(test.per, r.effect, r.slope.con) %>%
   summarise(lrt.p.con.mean2 = mean(lrt.p.con), 
             n.sign.lrt2 = length(lrt.p.con[lrt.p.con < 0.05]), 
             n.lrt = n.simus,#length(lrt.p.con), 
@@ -327,16 +332,18 @@ lrt.data2
 
 ```{r echo=FALSE}
 
-p <- ggplot(data = lrt.data2, aes(y=proportion.sign.lrt2))+
-      geom_point(aes(x=as.factor(r.effect), y=proportion.sign.lrt2))+
-      geom_boxplot(aes(x=as.factor(r.effect), y=proportion.sign.lrt2, group=r.effect))+
-      #theme_classic()+
-      ylim(0.3, 1)+
-      geom_hline(yintercept=0.8, colour="red", lty=2)+
-      facet_wrap(~r.slope.con)
- p
-ggsave("simulation_results.png")
+p.con.power <- ggplot(data = lrt.data2, aes(y=proportion.sign.lrt2))+
+        geom_boxplot(data = lrt.data2 %>% filter(r.slope.con == "0.45"), aes(x=as.factor(r.effect), y=proportion.sign.lrt2, group=as.factor(r.effect)), position = position_nudge(x = -.15), col = "darkorange", width=0.3)+
+          geom_boxplot(data = lrt.data2 %>% filter(r.slope.con == "0.9"), aes(x=as.factor(r.effect), y=proportion.sign.lrt2, group=as.factor(r.effect)), position = position_nudge(x = .15), col = "dodgerblue", width=0.3)+
+      ylim(0.0, 1)+
+  geom_hline(yintercept = 0.8, colour = "black", lwd = 1.05, lty = 3) +
+      facet_wrap(~test.per)+
+      ylab("Power") +
+      xlab("Size of random effect") +
+      theme_bw()
+ p.con.power
 
+#ggsave(p, filename = "GLMM_w_condition_power.png", scale = 0.5, height = 8, width = 12)
 ```
 
 #### Plotting the intercepts
@@ -385,11 +392,31 @@ lty=2)
 ```
 
 ```{r echo=FALSE}
-ggplot(data = all.res2, aes(x=as.factor(r.effect), y=conditiontest))+
-  geom_jitter( alpha=0.5, col="grey")+
-  geom_boxplot(aes(x=as.factor(r.effect), y=conditiontest, group=r.effect), alpha=0.1, outlier.colour="white")+
-  geom_hline(yintercept=coefs["conditiontest"], colour="red", lty=2)+
-  facet_wrap(~r.slope.con)
+p.con.est <- ggplot(data = all.res2, aes(x = as.factor(r.effect), y = conditiontest)) +
+  geom_jitter(data = all.res2, aes(x = as.factor(r.effect), y = conditiontest, color = as.factor(r.slope.con)), size = 1.5, position = position_jitterdodge(dodge.width = 0.8, jitter.width = 0.5), alpha = .1) +
+  scale_color_manual(values = c("darkorange", "dodgerblue"), name = "Random slopes") +
+  geom_boxplot(data = all.res2 %>% filter(r.slope.con == "0.45"), aes(x = as.factor(r.effect), y = conditiontest, group = as.factor(r.effect)), position = position_nudge(x = -.2), width = 0.3, alpha = 0.1, outlier.colour = "white") +
+  geom_boxplot(data = all.res2 %>% filter(r.slope.con == "0.9"), aes(x = as.factor(r.effect), y = conditiontest, group = as.factor(r.effect)), position = position_nudge(x = .2), width = 0.3, alpha = 0.1, outlier.colour = "white") +
+  facet_wrap(~test.per) +
+  geom_hline(yintercept = 0, colour = "black", alpha = 0.5) +
+  geom_hline(data = data.frame(test.per = "0.65"), aes(yintercept = coefs["conditiontest"]), colour = "red", lwd = 1.05, lty = 2, alpha = 0.7) +
+  geom_hline(data = data.frame(test.per = "0.55"), aes(yintercept = qlogis(0.55) - qlogis(1 / 3)), colour = "red", lwd = 1.05, lty = 2, alpha = 0.7) +
+  ylab("Condition fixed effect") +
+  xlab("Size of random intercept") +
+  theme_bw() +
+  theme(legend.position = "none")
+
+p.legend <- ggplot(data = all.res2 %>% mutate(r.slope.con = fct_recode(as.factor(r.slope.con), "medium" = "0.45", "large" = "0.9")), aes(x = as.factor(r.effect), y = conditiontest)) +
+  geom_point(aes(colour = as.factor(r.slope.con))) +
+  scale_color_manual(values = c("darkorange", "dodgerblue"), name = "Random slope") +
+  theme_classic() +
+  theme(legend.direction = "horizontal", legend.box.background = element_rect(colour = "black"))
+
+p.leg <- get_legend(p.legend)
+
+p.con <- plot_grid(p.con.power, p.con.est, labels = c("a", "b"), rel_widths = c(1, 1))
+p.con2 <- ggdraw(plot_grid(p.con, p.leg, ncol = 1, nrow = 2, rel_heights = c(1, 0.15)))
+ggsave(p.con2, filename = "condition_model.png", scale = 0.5, height = 9, width = 16)
 ```
 
 
