--- a/power_analysis/power_analysis_binomial_GLMM_Exp4.Rmd
+++ b/power_analysis/power_analysis_binomial_GLMM_Exp4.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "power analysis - binomial GLMM"
+title: "Exp4 - power analysis - binomial GLMM"
 author: "Christoph Völter"
 date: "31/05/2020"
 output: 
@@ -16,7 +16,7 @@ library(tidyverse)
 library(cowplot)
 library("gghalves")
 
-load("power_sim_disjsyll_order_as_factor_1000iter_12tr_2levels.RData")
+load("power_sim_disjsyll_1000iter_Exp4.RData")
 ```
 
 ## Generate data
@@ -29,7 +29,7 @@ n.per.subject <- 12 # observations per subject
 n.per.condition <- 12 # observations per subject and condition
 subj.id <- as.factor(paste("subj", 1:n.subject, sep = "."))
 age_range <- c(12:31) # age range between 8 and 40
-control.per <- 1 / 3 # performance in control condition
+control.per <- 1 / 4 # performance in control condition
 test.per <- c(0.55, 0.65) # performance in test condition
 
 start.data <- data.frame(subj.id)
@@ -88,26 +88,6 @@ range(apply(X = xx > 0, MARGIN = 1, sum))
 xx <- table(start.data$subj.id, start.data$order)
 range(apply(X = xx > 0, MARGIN = 1, sum))
 ```
-
-
-
-```{r include=FALSE}
-#not relevant for the simulation, chunk can be removed.
-## parameterization of the fixed effects
-pv <- c(0, 1)
-c0 <- log(control.per / (1 - control.per)) # intercept
-c.test <- log(test.per / (1 - test.per)) - log(control.per / (1 - control.per)) / (max(pv) - min(pv)) # slope
-#c.test <- (qlogis(test.per) - qlogis(control.per)) / (max(pv) - min(pv)) # slope using qlogis
-
-LP <- c0 + c.test * pv # linear predictor
-rv <- exp(LP) / (1 + exp(LP)) # response variable
-range(rv)
-
-par(mar=c(3, 3, 0.2, 0.2), mgp=c(1.7, 0.3, 0), tcl=-0.2, las=1)
-plot(x=as.factor(pv), y=rv, type="hist", ylim=c(0, 1),
-xlab="condition", ylab="correct choice")
-```
-
 
 
 ## Simulation
@@ -220,7 +200,7 @@ for (i in 1:nrow(all.res)) {
 }
 
 
-#save.image("power_sim_disjsyll_order_as_factor_1000iter_12tr_2levels.RData")
+#save.image("power_sim_disjsyll_1000iter_Exp4.RData")
 ```
 
 ## Evaluation of results 
@@ -263,8 +243,6 @@ mtext(text = c("icpt", "conditiontest", "re.sd"), side = 1, at = 1:3, line = 0.2
 
 ```{r include=FALSE}
 all.res2=subset(all.res, warns.full==0)
-
-table(round(all.res2$conditiontest))
 
 ```
 
@@ -332,7 +310,7 @@ lrt.data2
 
 ```{r echo=FALSE}
 
-p.con.power <- ggplot(data = lrt.data2, aes(y=proportion.sign.lrt2))+
+p.exp4.con.power <- ggplot(data = lrt.data2, aes(y=proportion.sign.lrt2))+
         geom_boxplot(data = lrt.data2 %>% filter(r.slope.con == "0.45"), aes(x=as.factor(r.effect), y=proportion.sign.lrt2, group=as.factor(r.effect)), position = position_nudge(x = -.15), col = "darkorange", width=0.3)+
           geom_boxplot(data = lrt.data2 %>% filter(r.slope.con == "0.9"), aes(x=as.factor(r.effect), y=proportion.sign.lrt2, group=as.factor(r.effect)), position = position_nudge(x = .15), col = "dodgerblue", width=0.3)+
       ylim(0.0, 1)+
@@ -341,9 +319,8 @@ p.con.power <- ggplot(data = lrt.data2, aes(y=proportion.sign.lrt2))+
       ylab("Power") +
       xlab("Size of random effect") +
       theme_bw()
- p.con.power
+ p.exp4.con.power
 
-#ggsave(p, filename = "GLMM_w_condition_power.png", scale = 0.5, height = 8, width = 12)
 ```
 
 #### Plotting the intercepts
@@ -365,6 +342,9 @@ mtext(text="re:", side=1, line=1.4, at=0.5, cex=1)
 abline(v=(1:length(r.effects))[-length(r.effects)]*length(r.slope.con)+0.5,
 lty=2)
 ```
+
+
+
 ```{r echo=FALSE}
 ggplot(data = all.res2, aes(x=as.factor(r.effect), y=icpt))+
   geom_jitter( alpha=0.5, col="grey")+
@@ -392,7 +372,7 @@ lty=2)
 ```
 
 ```{r echo=FALSE}
-p.con.est <- ggplot(data = all.res2, aes(x = as.factor(r.effect), y = conditiontest)) +
+p.exp4.con.est <- ggplot(data = all.res2, aes(x = as.factor(r.effect), y = conditiontest)) +
   geom_jitter(data = all.res2, aes(x = as.factor(r.effect), y = conditiontest, color = as.factor(r.slope.con)), size = 1.5, position = position_jitterdodge(dodge.width = 0.8, jitter.width = 0.5), alpha = .1) +
   scale_color_manual(values = c("darkorange", "dodgerblue"), name = "Random slopes") +
   geom_boxplot(data = all.res2 %>% filter(r.slope.con == "0.45"), aes(x = as.factor(r.effect), y = conditiontest, group = as.factor(r.effect)), position = position_nudge(x = -.2), width = 0.3, alpha = 0.1, outlier.colour = "white") +
@@ -400,7 +380,8 @@ p.con.est <- ggplot(data = all.res2, aes(x = as.factor(r.effect), y = conditiont
   facet_wrap(~test.per) +
   geom_hline(yintercept = 0, colour = "black", alpha = 0.5) +
   geom_hline(data = data.frame(test.per = "0.65"), aes(yintercept = coefs["conditiontest"]), colour = "red", lwd = 1.05, lty = 2, alpha = 0.7) +
-  geom_hline(data = data.frame(test.per = "0.55"), aes(yintercept = qlogis(0.55) - qlogis(1 / 3)), colour = "red", lwd = 1.05, lty = 2, alpha = 0.7) +
+  geom_hline(data = data.frame(test.per = "0.55"), aes(yintercept = qlogis(0.55) - qlogis(1 / 4)), colour = "red", lwd = 1.05, lty = 2, alpha = 0.7) +
+  ylim(-0.3, 3.2)+
   ylab("Condition fixed effect") +
   xlab("Size of random intercept") +
   theme_bw() +
@@ -414,9 +395,9 @@ p.legend <- ggplot(data = all.res2 %>% mutate(r.slope.con = fct_recode(as.factor
 
 p.leg <- get_legend(p.legend)
 
-p.con <- plot_grid(p.con.power, p.con.est, labels = c("a", "b"), rel_widths = c(1, 1))
-p.con2 <- ggdraw(plot_grid(p.con, p.leg, ncol = 1, nrow = 2, rel_heights = c(1, 0.15)))
-ggsave(p.con2, filename = "condition_model.png", scale = 0.5, height = 9, width = 16)
+p.exp4.con <- plot_grid(p.exp4.con.power, p.exp4.con.est, labels = c("c", "d"), rel_widths = c(1, 1))
+p.exp4.con2 <- ggdraw(plot_grid(p.con,p.exp4.con, p.leg, ncol = 1, nrow = 3, rel_heights = c(1,1, 0.15)))#p.con is created in power_analysis_binomial_GLMM_Exp3.Rmd
+ggsave(p.exp4.con2, filename = "Exp3 and 4_condition_model.png", scale = 0.5, height = 14, width = 16)
 ```
 
 
@@ -442,9 +423,6 @@ lty=2)
 ggplot(data = all.res2, aes(x=as.factor(r.effect), y=re.sd))+
   geom_jitter( alpha=0.5, col="grey")+
   geom_boxplot(aes(x=as.factor(r.effect), y=re.sd, group=r.effect), alpha=0.1, outlier.colour="white")+
-  #theme_classic()+
-  #scale_y_continuous(trans='log10')+
-  #geom_hline(yintercept=0.05, colour="red", lty=2)+
   facet_wrap(~r.slope.con)
 ```
 
@@ -472,13 +450,4 @@ ggplot(data = all.res2, aes(y=lrt.p.con))+
   facet_wrap(~r.slope.con)
 
 ```
-
-
-
-
-```{r eval=FALSE, include=FALSE}
-#save.image("power_sim_disjunctive_syll_order_as_factor.RData")
-```
-
-
 
